--- a/.github/workflows/deploy-create-pre-release.yml
+++ b/.github/workflows/deploy-create-pre-release.yml
@@ -6,19 +6,10 @@ on:
       - 'main'
 
 jobs:
-  checkout:
-    name: Checkout the ${{ github.event.repository.default_branch }} branch
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.repository.default_branch }}
-
   release:
     runs-on: ubuntu-latest
     name: Create new release
-    needs: [ build ]
+    needs: [ checkout ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
