--- a/.github/workflows/deploy-create-pre-release.yml
+++ b/.github/workflows/deploy-create-pre-release.yml
@@ -1,4 +1,4 @@
-name: 'Deploy / Create Release'
+name: 'Deploy / Create Pre-Release'
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    name: Create new release
+    name: Create pre-release
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -28,7 +28,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release delete $RELEASE_VERSION --cleanup-tag --yes
-          gh release create $RELEASE_VERSION -n "This is the beta version of Plugin Check with the latest changes. This is not an official release." -t "$RELEASE_VERSION" --prerelease
+          
 
       - name: Upload asset to release
         env:
