--- a/.github/workflows/deploy-create-pre-release.yml
+++ b/.github/workflows/deploy-create-pre-release.yml
@@ -23,12 +23,6 @@ jobs:
         run: |
           echo "RELEASE_VERSION=beta" >> $GITHUB_ENV
 
-      - name: Delete existing tag
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release delete $RELEASE_VERSION --cleanup-tag --yes
-
       - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -39,10 +33,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release upload $RELEASE_VERSION build/plugin-check.zip
-          
-      - name: Set release to prerelease
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release edit $RELEASE_VERSION --prerelease
+          gh release upload $RELEASE_VERSION build/plugin-check.zip --clobber
