--- a/.github/workflows/deploy-create-pre-release.yml
+++ b/.github/workflows/deploy-create-pre-release.yml
@@ -16,15 +16,12 @@ jobs:
           ref: ${{ github.event.repository.default_branch }}
 
       - name: Build Plugin Check
-        run: |
-          npm run build
+        run: npm run build
 
       - name: Set release version
-        run: |
-          echo "RELEASE_VERSION=beta" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=beta" >> $GITHUB_ENV
 
       - name: Upload asset to release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload $RELEASE_VERSION build/plugin-check.zip --clobber
+        run: gh release upload $RELEASE_VERSION build/plugin-check.zip --clobber
