--- a/.github/workflows/deploy-create-pre-release.yml
+++ b/.github/workflows/deploy-create-pre-release.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           ref: ${{ github.event.repository.default_branch }}
 
+      - name: Append -beta onto the plugin version in the plugin header
+        run: |
+          sed -i '' 's/Version: .*/Version: '"$VERSION"-beta'/' class-plugin-check.php
+
       - name: Build Plugin Check
         run: npm run build
 
