--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -15,11 +15,11 @@ jobs:
         with:
           ref: ${{ github.event.repository.default_branch }}
 
+      - name: Set version
+        run: echo "NEW_TAG_VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+
       - name: Build Plugin Check
         run: npm run build
-
-      - name: Set version
-        run: echo "NEW_TAG_VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
 
       - name: Publish new tag
         run: |
