--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -16,9 +16,7 @@ jobs:
           ref: ${{ github.event.repository.default_branch }}
 
       - name: Set version
-        run: |
-          ls -la
-          echo "NEW_TAG_VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+        run: echo "NEW_TAG_VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
 
       - name: Build Plugin Check
         run: npm run build
