--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -16,7 +16,10 @@ jobs:
           ref: ${{ github.event.repository.default_branch }}
 
       - name: Set version
-        run: echo "NEW_TAG_VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+        run: echo "NEW_TAG_VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
+
+      - name: Run version update
+        run: npm --no-git-tag-version version $NEW_TAG_VERSION
 
       - name: Build Plugin Check
         run: npm run build
@@ -25,9 +28,6 @@ jobs:
         run: |
           git tag $NEW_TAG_VERSION
           git push origin $NEW_TAG_VERSION
-
-      - name: Run version update
-        run: npm --no-git-tag-version version $NEW_TAG_VERSION
 
       - name: Push changes
         run: |
@@ -38,7 +38,7 @@ jobs:
       - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release create $NEW_TAG_VERSION -n "${{ github.event.milestone.description }}" -t "$NEW_TAG_VERSION"
+        run: gh release create $NEW_TAG_VERSION -t "$NEW_TAG_VERSION"
 
       - name: Upload asset to release
         env:
