--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -1,9 +1,8 @@
 name: 'Deploy / Create Release'
 
 on:
-  push:
-    tags:
-      - '*'
+  milestone:
+    types: [ closed ]
 
 jobs:
   release:
@@ -16,7 +15,20 @@ jobs:
           ref: ${{ github.event.repository.default_branch }}
 
       - name: Set version
-        run: echo "NEW_TAG_VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
+        run: |
+          echo "NEW_TAG_VERSION=${{ github.event.milestone.title }}" >> $GITHUB_ENV
+
+      - name: Validate tag version
+        run: |
+          MATCH='^([0-9]+\.){2}(\*|[0-9]+)(-.*)?$'
+          if ! [[ $NEW_TAG_VERSION =~ $MATCH ]]; then
+              echo "::error::Milestone title does not match semver format: '$NEW_TAG_VERSION'"
+              exit 1
+          fi
+          
+      - name: Update changelog.txt
+        run: |
+          echo -e "${{ github.event.milestone.title }} / $(date +%Y-%m-%d)\n===================\n${{ github.event.milestone.description }}\n\n$(cat changelog.txt)" > changelog.txt
 
       - name: Run version update
         run: npm --no-git-tag-version version $NEW_TAG_VERSION
