--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -31,7 +31,9 @@ jobs:
           echo -e "${{ github.event.milestone.title }} / $(date +%Y-%m-%d)\n===================\n${{ github.event.milestone.description }}\n\n$(cat changelog.txt)" > changelog.txt
 
       - name: Run version update
-        run: npm --no-git-tag-version version $NEW_TAG_VERSION
+        run: |
+          npm run version
+          npm --no-git-tag-version version $NEW_TAG_VERSION
 
       - name: Build Plugin Check
         run: npm run build
