--- a/.github/workflows/deploy-create-pre-release.yml
+++ b/.github/workflows/deploy-create-pre-release.yml
@@ -14,11 +14,20 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
+          
+      - name: Setup the Git user
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
 
       - name: Append -beta onto the plugin version in the plugin header
         run: |
           VERSION=$(jq -r .version package.json)
           sed -i 's/Version: .*/Version: '"$VERSION"-beta'/' class-plugin-check.php
+
+      - name: Download the plugin-scan script from the submodule
+        run: |
+          git submodule update --init --recursive
 
       - name: Build Plugin Check
         run: npm run build
