--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -13,6 +13,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
+          
+      - name: Setup the Git user
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
 
       - name: Set version
         run: |
@@ -30,6 +35,10 @@ jobs:
         run: |
           echo -e "${{ github.event.milestone.title }} / $(date +%Y-%m-%d)\n===================\n${{ github.event.milestone.description }}\n\n$(cat changelog.txt)" > changelog.txt
 
+      - name: Download the plugin-scan script from the submodule
+        run: |
+          git submodule update --init --recursive
+
       - name: Run version update
         run: |
           npm --no-git-tag-version version $NEW_TAG_VERSION
@@ -37,11 +46,6 @@ jobs:
 
       - name: Build Plugin Check
         run: npm run build
-
-      - name: Setup the Git user
-        run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
 
       - name: Publish new tag
         run: |
