--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bin/plugin-scan"]
 	path = bin/plugin-scan
-	url = git@github.com:Ipstenu/plugin-scan.git
+	url = https://github.com/Ipstenu/plugin-scan.git
