Update banner URLs in manifest

--- a/remote-update-assets/manifest.json
+++ b/remote-update-assets/manifest.json
@@ -17,7 +17,7 @@
 		"changelog" : "<h4>v0.0.2 released on March 03, 2023</h4><ul><li>Feature: Added remote updates from GitHub.</li></ul>"
 	},
 	"banners" : {
-		"low" : "https://github.com/EvanHerman/plugin-check/blob/main/remote-update-assets/plugin-check-banner-772x250.webp",
-		"high" : "https://github.com/EvanHerman/plugin-check/blob/main/remote-update-assets/plugin-check-banner-1544x500.webp"
+		"low" : "https://raw.githubusercontent.com/EvanHerman/plugin-check/main/remote-update-assets/plugin-check-banner-772x250.webp",
+		"high" : "https://raw.githubusercontent.com/EvanHerman/plugin-check/main/remote-update-assets/plugin-check-banner-1544x500.webp"
 	}
 }
