--- a/remote-update-assets/manifest.json
+++ b/remote-update-assets/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name" : "Plugin Check",
 	"slug" : "plugin-check",
-	"author" : "<a href='https://www.evan-herman.com>Evan Herman</a>",
+	"author" : "<a href='https://www.evan-herman.com'>Evan Herman</a>",
 	"author_profile" : "https://profiles.wordpress.org/eherman24",
 	"donate_link" : "https://github.com/sponsors/EvanHerman",
 	"version" : "0.0.3",
