--- a/remote-update-assets/manifest.json
+++ b/remote-update-assets/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name" : "Plugin Check",
 	"slug" : "plugin-check",
-	"author" : "<a href='https://www.evan-herman.com'>Evan Herman</a>",
+	"author" : "<a href=https://www.evan-herman.com>Evan Herman</a>",
 	"author_profile" : "https://profiles.wordpress.org/eherman24",
 	"donate_link" : "https://github.com/sponsors/EvanHerman",
 	"version" : "0.0.3",
@@ -14,7 +14,7 @@
 	"homepage" : "https://github.com/EvanHerman/plugin-check",
 	"sections" : {
 		"description" : "Scan a plugin for various checks when developing a WordPress plugin for the WordPress.org repository.",
-		"installation" : "Click the activate button and that's it.",
+		"installation" : "Click the activate button and thats it.",
 		"changelog" : "<h4>v0.0.3 released on March 03, 2023</h4><ul><li>Feature: Added remote updates from GitHub.</li></ul>"
 	},
 	"banners" : {
